--- a/ExamenFinal/style1.css
+++ b/ExamenFinal/style1.css
@@ -6,6 +6,7 @@
 }
 /* ir acomodando por orden*/
 body{
+    width: 100%;
     font-family: 'Be Vietnam Pro', sans-serif;
 }
 /* MOVER A MAIN*/
@@ -74,6 +75,7 @@ h3{
 .menu{
     display: none;
 }
+
 header{
     width: 100%;
     margin-left: 11%;
@@ -90,14 +92,11 @@ header div nav ul{
     justify-content: center;
     align-items: center;
     gap: 10px; 
-}
+} /*PARA CUANDO VAN EN DESKTOP ESTO LLEVA LO QUE ESCONDE LA HAMBURGUESA*/
 /***header***/
 
 /***main***/
-main{
-    width: 100%;
-    border: solid 1px orangered;
-}
+
 main section h1{
     margin-left: 40px;
     display: flex;
@@ -114,6 +113,7 @@ main section h1{
     font-size: 16.2984px;
     line-height: 26px;
 }
+/*BOTON GET STARTED*/
 main section div button{
     margin-top: 5%;
     margin-left: 40%;
@@ -123,12 +123,14 @@ main section div button{
     justify-content: center;
     align-items: center;
 } 
+/*H2*/
 main section.subtitulo{
     margin-bottom: 30px;
     margin-left: 30px;
     margin-right: 30px;
     text-align: center;
 }
+/*ABAJO DEL H2*/
 .pgris{
     text-align: center;
     font-size: 16px;
@@ -137,17 +139,17 @@ main section.subtitulo{
     font-size: 16.2984px;
     line-height: 26px;
 }
-main div.ventajas{
+main section.ventajas{
     margin-left: 15px;
     margin-right: 10px;
     margin-bottom: 20px;
 }
-main div.ventajas section.ventajastitulos {
+main section.ventajas div.ventajastitulos {
     border-radius: 50px;
     background-color: rgb(255, 239, 234);
     width: 100%;
 }
-main div.ventajas section.ventajastitulos {
+main section.ventajas div.ventajastitulos {
     border-radius: 50px;
     background-color: rgb(255, 239, 234);
     width: 100%;
@@ -190,9 +192,11 @@ span.h2estilo {
 
 
 
-/*footer{
+footer{
+    width: 100%;
+
     background-color: #1E1E26;
-}*/
+}
 
 
 
